stage0/tests/sema/veo/62_error_cannot_return_trait.veo
trait Foo {}

// expected-error@+1: cannot use trait 'Foo' as a concrete return type
func foo(): Foo {}
